--- a/index.adoc
+++ b/index.adoc
@@ -262,6 +262,10 @@ Terraform guarda la información de la infraestructura creada en un archivo de e
 * Actualizar sólo los componentes necesarios
 * Eliminar componentes
 
+Una caracterísitica muy interesante de Terraform es la idempotencia, así como la facilidad para aplicar cambios. Si volvemos a ejecutar un despliegue con `terraform apply` y no ha habido cambios en los archivos de configuración tras el último despliegue (cuyo estado quedó almacenado en el archivo `.tfstate`), el despliegue quedará intacto. Es decir, no se volverá a crear infraestructura repetida ni se reemplazará la infraestructura creada por una nueva si no hay cambios en los archivos de configuración.
+
+Sin embargo, si modificamos la configuración modificando los archivos Terraform estaremos indicando un nuevo estado al que queremos llegar. En este caso, al aplicar `terraform apply` sí se desplegarán los cambios realizados en la configuración. Sin embargo, sólo se desplegarán los cambios, manteniendo intacta la configuración no modificada.
+
 .Atención al archivo de estado
 ****
 **El archivo de estado puede contener información sensible por lo que debe quedar excluido en el sistema de control de versiones.** 
@@ -274,6 +278,26 @@ Recuerda incluirlo el archivo de estado en https://github.com/github/gitignore/b
 Además, el estado local no funciona bien en un entorno colaborativo, ya que la ejecución local almacenaría el estado en cada equipo local y no coincidirá con el estado almacenado en otro equipo de otro miembro. Si dos o más personas necesitan ejecutar la configuración Terraform se necesita almacenar el archivo en un lugar remoto a fin de evitar errores y no dañar la infraestructura existente.
 
 Más información sobre https://www.terraform.io/docs/state/remote.html[estado remoto] y https://www.terraform.io/docs/backends/[configuración de backends].
+
+[NOTE]
+====
+Google Cloud Storage ofrece https://www.terraform.io/docs/backends/types/gcs.html[soporte para el almacenamiento del estado de Terraform] con la opción de bloqueo. Crea un segmento (_bucket_) y activa el versionado de objetos para recuperación de estados anteriores ante errores accidentales. 
+
+Terraform también permite usar una base de datos PostgreSQL para el almacenamiento del estado con la opción de bloqueo. Aprovisiona una máquina virtual con SQL o usa un servicio de PostgreSQL en la nube para el almacenamiento de estado en PostgreSQL.
+
+Actualmente. Terraform da una lista bastante amplia de backends para almacenamiento de estado 
+
+* https://www.terraform.io/docs/backends/types/azurerm.html[Azure Blob Storage]
+* https://www.terraform.io/docs/backends/types/consul.html[Consul]
+* https://www.terraform.io/docs/backends/types/etcdv3.html[etcd]
+* https://www.terraform.io/docs/backends/types/gcs.html[Google Cloud Storage]
+* https://www.terraform.io/docs/backends/types/http.html[cliente REST HTTP]. Prueba con este https://medium.com/@meson10/remote-terraform-state-server-47c481983268[ejemplo] en Go MongoDB
+* https://www.terraform.io/docs/backends/types/kubernetes.html[Kuberntes Secrets] (Máximo 1 MB)
+* https://www.terraform.io/docs/backends/types/pg.html[PostgreSQL]
+* https://www.terraform.io/docs/backends/types/s3.html[Amazon S3]
+* https://www.terraform.io/docs/backends/types/swift.html[OpenStack Swift]
+* ...
+====
 ****
 ### Gestión de la infraestructura
 
@@ -312,7 +336,7 @@ provider "openstack" {
 }
 ----
 
-Se usan las variables definidas en el archivo `varialbles.tf`
+Se usan las variables definidas en el archivo `variables.tf`
 
 [source, tf]
 ----
@@ -500,10 +524,6 @@ output tf_vm_Floating_IP {
 <8> Esperar a que esté creado el recurso de la IP flotante
 
 ### Modificar el despliegue
-
-Una caracterísitica muy interesante de Terraform es la idempotencia, así como la facilidad para aplicar cambios. Si volvemos a ejecutar un despliegue con `terraform apply` y no ha habido cambios en los archivos de configuración tras el último despliegue (cuyo estado quedó almacenado en el archivo `.tfstate`), el despliegue quedará intacto. Es decir, no se volverá a crear infraestructura repetida ni se reemplazará la infraestructura creada por una nueva si no hay cambios en los archivos de configuración.
-
-Sin embargo, si modificamos la configuración modificando los archivos Terraform estaremos indicando un nuevo estado al que queremos llegar. En este caso, al aplicar `terraform apply` sí se desplegarán los cambios realizados en la configuración. Sin embargo, sólo se desplegarán los cambios, manteniendo intacta la configuración no modificada.
 
 A modo de ilustración este ejemplo muestra cómo aplicar cambios a una configuración desplegada previamente. En este caso se trata de:
 
@@ -714,4 +734,389 @@ image::images/SGApp.png[]
 
 ## Despliegue en Google Cloud
 
-To Do
+El provider https://registry.terraform.io/providers/hashicorp/google/latest/docs[Google Cloud] permite crear configuraciones Terraform para desplegar configuraciones en el gran conjunto de servicios de Google Cloud. Entre los recursos que podemos gestionar están:
+
+* Infraestructura (Instancias, Imágenes, Redes, ...)
+* App Engine
+* Bases de datos (Cloud SQL, Big Query, Firebase, ...)
+* Kubernetes
+* Cloud Storage
+* ...
+
+### Crear una clave para la Cuenta de servicio
+
+* Seleccionar el proyecto Google Cloud.
+* En el menú de navegación seleccionae `IAM y administración | Cuentas de servicio`.
+* Seleccionar `Crear cuenta de servicio`.
+* Darle un nombre (p.e. `terraform`)
+* Seleccionar Crear.
+* En el paso `Conceder a esta cuenta de servicio acceso al proyecto` del asistente, seleccionar el rol `Proyecto -> Editor`.
+* Editar la Cuenta de servicio. En la sección `Claves` seleccionar `Añadir clave | Crear clave`.
+* Dejar `JSON` en el tipo de clave..
+* Seleccionar `Crear`. A continuación se descargará la clave privada.
+
+### Configuración del provider
+
+Para usarlo hay que configurar sus https://registry.terraform.io/providers/hashicorp/google/latest/docs[parámetros de acceso]. Lo haremos en un archivo `providers.tf`
+
+.El archivo `providers.tf`
+[source, tf]
+----
+terraform {
+  required_providers {
+    google = {
+      source = "hashicorp/google"
+    }
+  }
+}
+
+provider "google" {
+  version = "3.5.0"
+
+  credentials = file("../gcp-identity.json")
+
+  project = var.gcp-project
+  region  = "us-central1"
+  zone    = "us-central1-c"
+}
+----
+
+Se usan las variables definidas en el archivo `variables.tf`
+
+[source, tf]
+----
+variable "gcp-username" {
+  description = "GCP user name"
+  default     = "mtorres"
+}
+
+variable "gcp-project" {
+  description = "GCP project"
+  default     = "cc2021-clouddi"
+}
+----
+
+### Inicializar el provider
+
+Para inicializar ejecutar `terraform init`.
+
+[source, bash]
+----
+Initializing the backend...
+
+Initializing provider plugins...
+- Finding hashicorp/google versions matching "3.5.0"...
+- Installing hashicorp/google v3.5.0...
+- Installed hashicorp/google v3.5.0 (signed by HashiCorp)
+
+Terraform has been successfully initialized!
+
+You may now begin working with Terraform. Try running "terraform plan" to see
+any changes that are required for your infrastructure. All Terraform commands
+should now work.
+
+If you ever set or change modules or backend configuration for Terraform,
+rerun this command to reinitialize your working directory. If you forget, other
+commands will detect it and remind you to do so if necessary.
+----
+
+Esto creará una carpeta `.terraform` con en plugin de Google Cloud instalado y disponible para ser usado en el proyecto.
+
+### Despliegue de una instancia
+
+La creación de una instancia se realiza con https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_instance[google_compute_instance].
+
+A continuación, crearemos una instancia denominada `tf-vm`. El nombre que se use en `resource`, no el nombre asignado en `name`, es el que referencia al objeto resource creado. Esto permite tratar el recurso creado (p.e. para asignarle una dirección IP fija, para conectarle un volumen, …​).
+
+En el ejemplo siguiente se ilustra la creación de una máquina virtual con una dirección IP efímera.
+
+[NOTE]
+====
+De forma predeterminada, si no se indica ninguna dirección IP fija, Google Cloud creará una efímera para la máquina virtual.
+====
+
+[source, tf]
+----
+resource "google_compute_instance" "tf-vm" { <1>
+  name         = "tf-vm"
+  zone         = "us-central1-a"
+  machine_type = "n1-standard-1"
+  boot_disk {
+    initialize_params {
+      image = "ubuntu-os-cloud/ubuntu-1804-lts"
+    }
+  }
+
+  # Add SSH access to the Compute Engine instance
+  metadata = {
+    ssh-keys = "${var.gcp-username}:${file("~/.ssh/id_rsa.pub")}"
+  }
+
+  # Startup script
+  # metadata_startup_script = "${file("update-docker.sh")}"
+
+  network_interface { <2>
+    network    = "default"
+    subnetwork = "default"
+
+    access_config {} <3>
+  }
+}
+
+output "tf-vm-internal-ip" { <4>
+  value      = google_compute_instance.tf-vm.network_interface.0.network_ip
+  depends_on = [google_compute_instance.tf-vm]
+}
+
+output "tf-vm-ephemeral-ip" { <5>
+  value      = google_compute_instance.tf-vm.network_interface.0.access_config.0.nat_ip
+  depends_on = [google_compute_instance.tf-vm]
+}
+----
+<1> Creación de un recurso instancia (máquina virtual) en Google Cloud. El objeto recurso creado es asignado a la variable `tf-vm`.
+<2> Red a la que se conectará la instancia creada.
+<3> Dejar `access_config` sin configurar hará que se genere una dirección IP efímera.
+<4> Dirección IP interna de la instancia
+<5> Dirección IP efímera de la instancia
+
+### Modificar el despliegue
+
+A modo de ilustración este ejemplo muestra cómo aplicar cambios a una configuración desplegada previamente. En este caso se trata de:
+
+* Cambiar el tipo de máquina de la instancia desplegada a `n1-standard-2`.
+
+Crear un volumen de 1GB (https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_disk[`google_compute_disk`]).
+
+Conectar el volumen a la máquina virtual (https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_attached_disk[`google_compute_attached_disk`]).
+
+[source, tf]
+----
+resource "google_compute_instance" "tf-vm" {
+  name         = "tf-vm"
+  zone         = "us-central1-a"
+  machine_type = "n1-standard-2" <1>
+  boot_disk {
+    initialize_params {
+      image = "ubuntu-os-cloud/ubuntu-1804-lts"
+    }
+  }
+...
+resource "google_compute_disk" "tf-disk" { <2>
+  name = "tf-disk"
+  type = "pd-ssd" <3>
+  zone = "us-central1-a" <4>
+  size = 1 <5>
+}
+
+resource "google_compute_attached_disk" "attached-tf-disk" {<6>
+  disk     = google_compute_disk.tf-disk.id <7>
+  instance = google_compute_instance.tf-vm.id <8>
+}
+----
+<1> Modificación del tamaño de la imagen
+<2> Creación de un recurso volumen
+<3> Tipo SSD
+<4> Zona en la que se localiza el almacenamiento
+<5> Especificación del tamaño del volumen
+<6> Conexión del volumen a la instancia
+<7> Acceso al id del volumen creado
+<8> Acceso al id de la instancia
+
+Al ejecutar con `terraform apply`, Terraform nos informará de los cambios detectados y de la nueva configuración. La nueva configuración se aplicará si confirmamos la operación.
+
+### Ejecutar un script de inicialización
+
+Una característica muy interesante en el despliegue de una instancia es la posibilidad de ejecutar un script de inicialización durante su creación. Esto permite la creación de instancias con paquetes instalados y configurados.
+
+Terraform permite esta operación en OpenStack pasando un script en el parámetro `metadata_startup_script` al crear la instancia.
+
+[NOTE]
+====
+Si se modifica el valor de `metadata_startup_script` se creará un nuevo servidor si se usa `terraform apply`.
+====
+
+A continuación se muestra un script `install_mysql.sh` que realiza varias operaciones:
+
+* Actualizar el repositorio de paquetes.
+* Instalar un servidor MySQL con el password `my_password`.
+* Descargar un archivo con un script SQL para inicializar una base de datos de ejemplo.
+* Ejecutar el archivo SQL para inicializar la base de datos.
+* Modificar el archivo de configuración de MySQL (`mysqld.cnf`) para que admita conexiones desde cualquier lugar.
+
+.El script install_mysql.sh
+[source, bash]
+----
+#!/bin/bash
+
+sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password my_password'
+sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password my_password'
+sudo apt-get update
+sudo apt-get -y install mysql-server
+wget https://gist.githubusercontent.com/ualmtorres/55325478004104fbe828683ea5131e40/raw/0c8edc5750cac0a6a5796544860c8cd94d5c94ac/sginit.sql -O /home/ubuntu/sginit.sql
+mysql -h "localhost" -u "root" "-pmy_password" < "/home/ubuntu/sginit.sql"
+
+sudo sed -i 's/127.0.0.1/0.0.0.0/g' /etc/mysql/mysql.conf.d/mysqld.cnf
+sudo service mysql restart
+----
+
+Para crear la instancia con Terraform basta con crear el recurso pasando a la propiedad `metadata_startup_script` el nombre y la ruta del script de inicialización. En este caso, se supone que el script de inicialización está en el mismo directorio que el script Terraform.
+
+[source, bash]
+----
+resource "google_compute_instance" "tf-vm" {
+  name         = "tf-vm"
+  zone         = "us-central1-a"
+  machine_type = "n1-standard-1"
+  boot_disk {
+    initialize_params {
+      image = "ubuntu-os-cloud/ubuntu-1804-lts"
+    }
+  }
+
+  # Add SSH access to the Compute Engine instance
+  metadata = {
+    ssh-keys = "${var.gcp-username}:${file("~/.ssh/id_rsa.pub")}" <1>
+  }
+
+  tags = ["ssh", "http"]
+
+  # Startup script
+  metadata_startup_script = file("setup-docker.sh")
+
+  network_interface {
+    network    = "default"
+    subnetwork = "default"
+
+    access_config {}
+  }
+}
+----
+<1> Pasar el script de inicialización de la instancia
+
+### Despliegue de aplicación Docker Compose
+
+En este apartado veremos cómo crear una instancia aprovisionada con Docker y Docker Compose. Además, la instancia se inicializará con un archivo `docker-compose.yml` que despliega dos contenedores: un contenedor MySQL con una base de datos inicializada y otro contenedor con una aplicación PHP que muestra un catálogo de productos almacenados en el contenedor MySQL.
+
+La aplicación deberá ser accesible en Internet. Por tanto, hay que definir una regla en el cortafuegos que permita la comunicación HTTP. Aprovecharemos la configuración para definir también una regla para la comunicación SSH. Cada regla tendrá un etiqueta asociada. Las instancias que deseen aplicar la regla incluirán la etiqueta correspondiente en su definición.
+
+.El archivo `network-firewall.tf`
+[source, bash]
+----
+# allow http traffic
+resource "google_compute_firewall" "allow-http" {
+  name    = "tf-fw-allow-http" <1>
+  network = "default" <2>
+  allow {
+    protocol = "tcp"
+    ports    = ["80"] <3>
+  }
+  target_tags = ["http"] <4>
+}
+
+# allow ssh traffic
+resource "google_compute_firewall" "allow-ssh" { 
+  name    = "tf-fw-allow-ssh" <5>
+  network = "default" <6>
+  allow {
+    protocol = "tcp" 
+    ports    = ["22"] <7>
+  }
+  target_tags = ["ssh"] <8>
+}
+----
+<1> Nombre de la regla del firewall
+<2> Red a la que se aplica la regla definida
+<3> Puerto abierto
+<4> Etiqueta para poder usar la regla
+<5> Nombre de la regla del firewall
+<6> Red a la que se aplica la regla definida
+<7> Puerto abierto
+<8> Etiqueta para poder usar la regla
+
+[source, bash]
+----
+resource "google_compute_instance" "tf-vm" {
+  name         = "tf-vm"
+  zone         = "us-central1-a"
+  machine_type = "n1-standard-1"
+  boot_disk {
+    initialize_params {
+      image = "ubuntu-os-cloud/ubuntu-1804-lts"
+    }
+  }
+
+  # Add SSH access to the Compute Engine instance
+  metadata = {
+    ssh-keys = "${var.gcp-username}:${file("~/.ssh/id_rsa.pub")}"
+  }
+
+  tags = ["ssh", "http"] <1> 
+
+  # Startup script
+  metadata_startup_script = file("setup-docker.sh") <2>
+
+  network_interface {
+    network    = "default"
+    subnetwork = "default"
+
+    access_config {}
+  }
+}
+----
+<1> Reglas del firewall a aplicar a la instancia
+<2> Script de inicialización de la instancia
+
+.El script `setup-docker.sh` de inicialización de la instancia
+[source, bash]
+----
+#!/bin/bash
+
+echo "Instalando Docker"
+
+apt-get update
+apt-get install -y \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg-agent \
+    software-properties-common
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+apt-key fingerprint 0EBFCD88
+add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+   $(lsb_release -cs) \
+   stable"
+apt-get update
+apt-get install -y docker-ce docker-ce-cli containerd.io <1>
+systemctl enable docker
+
+echo "Instalando Docker Compose" <2>
+curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+chmod +x /usr/local/bin/docker-compose
+
+git clone https://github.com/ualmtorres/docker_customer_catalog.git <3>
+cd docker_customer_catalog
+docker-compose up -d <4>
+
+exit 0
+----
+<1> Instalación de Docker
+<2> Instalación de Docker Compose
+<3> Clonado del repositorio con el archivo de despliegue, la aplicación y el script de inicialización de la base de datos
+<4> Despliegue del entorno (Base de datos + Aplicación)
+
+La figura siguiente ilustra el resultado tras unos minutos que se necesitan para la creación e inicialización de la instancia y despliegue de la base de datos y la aplicación de catálogo.
+
+image::images/CustomerCatalog.png[]
+
+### Recursos de interés
+
+https://learn.hashicorp.com/collections/terraform/gcp-get-started[Tutorial Get Started - Google Cloud con Terraform]
+
+https://medium.com/google-cloud/deploying-docker-images-to-cloud-run-using-terraform-ee8ae4ecb72e[Tutorial Serverless Deployment on Cloud Run using Terraform] y https://www.sethvargo.com/configuring-cloud-run-with-terraform/[Configuring Cloud Run with Terraform]
+
+[NOTE]
+====
+Actualmente, el provider para Cloud Run sólo permite acceso al puerto 8080 del contenedor. Por tanto, las imágenes Docker tienen que servir su contenido a través de ese puerto para un despliegue en Cloud Run desde Terraform.
+====
+
